# satrain_models

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
models/: README.md
models/ResNet/: compute.toml  data_scaling.sh  dataset.toml  dataset_atms.toml  dataset_l.toml  dataset_m.toml  dataset_xl.toml  dataset_xs.toml  experiments.sh  model_large.toml  model_medium.toml  model_small.toml  test.py  train.py
models/basic_unet/: README.md  compute.toml  compute_adamw.toml  compute_adamw_ca.toml  compute_adamw_ca_r.toml  compute_adamw_plateau.toml  compute_sgd.toml  compute_sgd_ca.toml  compute_sgd_ca_r.toml  compute_sgd_plateau.toml  dataset.toml  dataset_geo.toml  experiments.sh  requirements.txt  test.py  train.py
models/bmci/: bmci.toml  dataset.toml  test.py  train.py
models/convnext/: README.md  complexity_scaling.sh  compute.toml  data_scaling.sh  dataset.toml  dataset_xl.toml  model_base.toml  model_large.toml  model_small.toml  model_tiny.toml  test.py  train.py
models/dense_encoder_decoder/: compute.toml  model_resnext_d1.toml  model_resnext_d2.toml  model_resnext_d4.toml  test.py  train.py
models/efficient_net_v2/: README.md  compute.toml  dataset.toml  dataset_l.toml  model_large.toml  model_medium.toml  test.py  (+2 more)
notebooks/: case_studies.ipynb  case_studies_geo_ir.ipynb  ipwg_net.ipynb  model_tuning.ipynb  neural_network_training_recipe.ipynb  results.ipynb  results_geo_ir.ipynb
satrain_models/: __init__.py  bmci.py  bmci_c.cpp  bmci_fast.py  config.py  convnext.py  datamodule.py  efficient_net_v2.py  encoder_decoder.py  fully_connected.py  lightning.py  metrics.py  random_forest.py  resnet.py  swinunet.py  tensorboard_to_netcdf.py  unet.py  unetpp.py  xgboost.py
tests/: conftest.py  test_bmci.py  test_lightning.py  test_unet.py  test_unetpp.py
(+178 files in other folders)
